--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=visualization.html">
-    <link rel="icon" href="favicon.png" type="image/png"> <!-- Atualizando para favicon local -->
+    <meta http-equiv="refresh" content="0; url=index.html">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
 
-    <title>Redirecionando para Visualization</title>
-
+    <title>RW Tips</title>
 </head>
 <body>
-    <p>Redirecionando para <a href="visualization.html">visualization.html</a>...</p>
+    <p>Redirecionando para <a href="index.html">RW Tips</a>...</p>
 </body>
 </html>
