Corrige redirecionamento para visualization.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=index.html">
+    <meta http-equiv="refresh" content="0; url=visualization.html">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -10,6 +10,6 @@
     <title>RW Tips</title>
 </head>
 <body>
-    <p>Redirecionando para <a href="index.html">RW Tips</a>...</p>
+    <p>Redirecionando para <a href="visualization.html">RW Tips</a>...</p>
 </body>
 </html>
