--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta http-equiv="refresh" content="0; url=visualization.html">
     
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
     
     <title>RW Tips</title>
 </head>
