--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="refresh" content="0; url=visualization.html">
     
     <!-- Favicons - versão expandida -->
-    <link rel="icon" href="/favicon.png" type="image/png">
-    <link rel="icon" href="./favicon.png" type="image/png">
-    <link rel="shortcut icon" href="/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="/favicon.png">
+    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="favicon.png">
     
     <title>RW Tips</title>
 </head>
