--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=visualization.html">
     
-    <!-- Favicons -->
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <!-- Favicons com caminho completo -->
+    <link rel="icon" type="image/png" href="/rw-tips/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/rw-tips/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/rw-tips/favicon.png">
     
     <title>RW Tips</title>
 </head>
