--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="refresh" content="0; url=visualization.html">
     
     <!-- Favicons com caminho completo -->
-    <link rel="icon" type="image/png" href="/rw-tips/favicon.png">
-    <link rel="shortcut icon" type="image/png" href="/rw-tips/favicon.png">
-    <link rel="icon" type="image/x-icon" href="/rw-tips/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     
     <title>RW Tips</title>
 </head>
