--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=visualization.html">
-    
-    <!-- Favicons com caminho completo -->
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    
+
+    <!-- Favicon usando link RAW -->
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png">
+
     <title>RW Tips</title>
 </head>
 <body>
