--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=visualization.html">
 
-    <!-- Favicon usando link RAW -->
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png">
-    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png">
+    <!-- Favicon usando caminho do GitHub Pages -->
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
     <title>RW Tips</title>
 </head>
