--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="refresh" content="0; url=visualization.html">
 
     <!-- Favicon usando caminho do GitHub Pages -->
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png">
+
 
     <title>RW Tips</title>
 </head>
