--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=visualization.html">
 
-    <!-- Favicon usando caminho do GitHub Pages -->
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png">
-    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png">
+    <!-- Controle de cache para garantir atualização -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
 
+    <!-- Favicon com versionamento para evitar cache -->
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png?v=2">
+    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png?v=2">
 
     <title>RW Tips</title>
 </head>
