--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
 
-    <!-- Favicon com versionamento para evitar cache -->
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png?v=2">
-    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/relderyw/rw-tips/master/favicon.png?v=2">
+    <!-- Favicon usando jsDelivr -->
+    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
 
     <title>RW Tips</title>
 </head>
