Atualiza index.html com favicon via CDN jsDelivr

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
 
+    <!-- Evita que o navegador procure o favicon no local padrão -->
+    <link rel="icon" href="data:,"> <!-- Favicon vazio para evitar busca padrão -->
+
     <title>RW Tips</title>
 </head>
 <body>
