--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
 
-    <!-- Evita que o navegador procure o favicon no local padrão -->
-    <link rel="icon" href="data:,"> <!-- Favicon vazio para evitar busca padrão -->
+    <!-- Favicon vazio em base64 para evitar busca no local padrão -->
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
     <title>RW Tips</title>
 </head>
