--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta http-equiv="Expires" content="0">
 
     <!-- Favicon usando jsDelivr -->
-    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/v6MhLNJX/11zon-cropped.png">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/v6MhLNJX/11zon-cropped.png">
+    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
 
     <!-- Favicon vazio em base64 para evitar busca no local padrão -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
