--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
 
-    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/relderyw/rw-tips@master/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Favicon vazio em base64 para evitar busca no local padrão -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
