--- a/live.html
+++ b/live.html
@@ -155,37 +155,23 @@
             transform: translateY(-2px);
         }
 
-        .button-group {
-            display: flex;
-            gap: 10px;
+        .h2h-button {
+            display: block;
+            width: 100%;
+            padding: 10px 15px;
             margin-top: 15px;
-            padding-top: 15px;
-            border-top: 1px solid rgba(255,255,255,0.1);
-        }
-
-        .h2h-button, .stats-button {
-            flex: 1;
-            padding: 8px 15px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             font-size: 14px;
             font-weight: 600;
-            transition: all 0.3s ease;
             text-transform: uppercase;
-        }
-
-        .h2h-button {
             background: linear-gradient(135deg, #00d4ff 0%, #00a6ff 100%);
             color: #000;
+            transition: all 0.3s ease;
         }
 
-        .stats-button {
-            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
-            color: white;
-        }
-
-        .h2h-button:hover, .stats-button:hover {
+        .h2h-button:hover {
             transform: translateY(-2px);
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
@@ -214,10 +200,6 @@
 
             .logo-text {
                 font-size: 1.5rem;
-            }
-
-            .button-group {
-                flex-direction: column;
             }
         }
 
@@ -301,14 +283,9 @@
                             <span>Escanteios: ${match.stats?.corners?.[0] || 0} - ${match.stats?.corners?.[1] || 0}</span>
                         </div>
                     </div>
-                    <div class="button-group">
-                        <button class="h2h-button" onclick="window.location.href='h2h_analysis.html?home=${encodeURIComponent(homePlayer)}&away=${encodeURIComponent(awayPlayer)}&homeID=${match.homeID}&awayID=${match.awayID}&leagueID=${match.leagueID}'">
-                            Ver H2H
-                        </button>
-                        <button class="stats-button" onclick="window.location.href='player_stats.html?home=${encodeURIComponent(homePlayer)}&away=${encodeURIComponent(awayPlayer)}&homeID=${match.homeID}&awayID=${match.awayID}'">
-                            Estatísticas
-                        </button>
-                    </div>
+                    <button class="h2h-button" onclick="window.location.href='h2h_analysis.html?home=${encodeURIComponent(homePlayer)}&away=${encodeURIComponent(awayPlayer)}&homeID=${match.home_id || ''}&awayID=${match.away_id || ''}&leagueID=${match.league_id || ''}'">
+                        Ver H2H
+                    </button>
                 `;
                 container.appendChild(matchElement);
             });
