Corrige URL da API para liga 22614 e ajusta parâmetros

--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -327,6 +327,7 @@
     <div id="h2hGamesList"></div>
 
     <script>
+        // Funções do segundo código
         function processH2HStats(games) {
             const stats = {
                 totalGames: games.length,
