--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -565,9 +565,16 @@
         const homeID = urlParams.get('homeID');
         const awayID = urlParams.get('awayID');
         const leagueID = urlParams.get('leagueID');
-
+       
         // Fetch e processamento dos dados
-        fetch(`https://api.green365.com.br/api/e-soccer/event/stats?homeID=${homeID}&awayID=${awayID}&home=${encodeURIComponent(homePlayer)}&away=${encodeURIComponent(awayPlayer)}&league=${leagueID}&eventID=0&period=last_30`)
+        let apiUrl;
+        if (leagueID === '22614') {
+            apiUrl = `https://api.green365.com.br/api/e-soccer/event/stats?homeID=${homeID}&awayID=${awayID}&home=${encodeURIComponent(homePlayer.toLowerCase())}&away=${encodeURIComponent(awayPlayer.toLowerCase())}&homeTeam=&awayTeam=&league=${leagueID}&eventID=0&period=last_30`;
+        } else {
+            apiUrl = `https://api.green365.com.br/api/e-soccer/event/stats?homeID=${homeID}&awayID=${awayID}&home=${encodeURIComponent(homePlayer)}&away=${encodeURIComponent(awayPlayer)}&league=${leagueID}&eventID=0&period=last_30`;
+        }
+
+        fetch(apiUrl)
             .then(response => response.json())
             .then(data => {
                 const players = data.players;
