--- a/visualization.html
+++ b/visualization.html
@@ -333,7 +333,9 @@
         <div class="button-container">
             <button id="viewResultsButton" class="action-button">Ver Últimos Resultados</button>
             <button id="viewStatisticsButton" class="action-button">Ver Estatísticas das Ligas</button>
+            <button id="registerBetButton" class="action-button" onclick="window.location.href='formularioApostas.html'">Registrar Aposta</button>
         </div>
+
 
         <select id="filter">
             <option value="">Todas as Ligas</option>
