--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -6,46 +6,126 @@
     <title>Registrar Aposta</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+        :root {
+            --primary-color: #00d4ff;
+            --secondary-color: #1f1f1f;
+            --background-dark: #121212;
+            --text-primary: #ffffff;
+            --text-secondary: #cccccc;
+            --card-hover: #2a2a2a;
+            --button-hover: #00aacc;
+            --neon-green: #00ff00;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Roboto', sans-serif;
+            background-color: var(--background-dark);
+            color: var(--text-primary);
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-        }
-        .container {
-            background-color: #fff;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 400px;
         }
+
+        .container {
+            background-color: var(--secondary-color);
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+            width: 450px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
         h2 {
             text-align: center;
+            color: var(--primary-color);
+            margin-bottom: 25px;
+            font-size: 1.8rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
+
         label {
             display: block;
-            margin-top: 10px;
+            margin-top: 15px;
+            color: var(--text-primary);
+            font-size: 0.9rem;
         }
-        input, select, button {
+
+        input, select {
             width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+            padding: 12px;
+            margin-top: 8px;
+            border: 2px solid var(--primary-color);
+            border-radius: 8px;
+            background-color: var(--background-dark);
+            color: var(--text-primary);
+            font-size: 14px;
+            transition: all 0.3s ease;
         }
+
+        input:focus, select:focus {
+            outline: none;
+            border-color: var(--button-hover);
+            box-shadow: 0 0 0 3px rgba(0, 212, 255, 0.2);
+        }
+
         button {
-            background-color: #4CAF50;
-            color: white;
+            width: 100%;
+            padding: 15px;
+            background: linear-gradient(135deg, #00d4ff 0%, #00a6ff 100%);
+            color: #000;
             border: none;
+            border-radius: 8px;
             cursor: pointer;
+            font-weight: 600;
+            font-size: 1rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-top: 25px;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 212, 255, 0.3);
         }
+
         button:hover {
-            background-color: #45a049;
+            background: linear-gradient(135deg, #00a6ff 0%, #0080ff 100%);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0, 212, 255, 0.4);
+        }
+
+        button:active {
+            transform: translateY(1px);
+            box-shadow: 0 2px 10px rgba(0, 212, 255, 0.3);
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                width: 90%;
+                padding: 20px;
+            }
+            
+            h2 {
+                font-size: 1.5rem;
+            }
+            
+            input, select, button {
+                padding: 10px;
+                font-size: 13px;
+            }
         }
     </style>
+
 </head>
 <body>
     <div class="container">
